hero mockup completed.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,10 +38,18 @@ Requisite content:
 
 
     <div id="hero-content">
-        <h1 style="font-size: 5em;">Bringing Premium to Fast Food</h1>
-        <h3>So bring home a guilt-free delectable experience.</h3>
-        <button>Menu</button>
-        <button>Order</button>
+        <div id="hero-interactable">
+            <h1 style="font-size: 5em;">Bringing Premium to Fast Food</h1>
+            <h6>So bring home a guilt-free delectable experience.</h6>
+            <div id="hero-button-container">
+                <button>Menu</button>
+                <button>Order</button>
+            </div>
+        </div>
+        <div id="hero-bgimg">
+            <div id="hero-bgimg-overlay"></div>
+            <img id="hero-bgimg-image" src="/images/stockphotoforfood.jpg" alt="Image depicting an example of food.">
+        </div>
     </div>
 
 
