--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -58,7 +58,7 @@ a {
   font-family: "Open Sans", sans;
   text-decoration: none;
   margin: 0;
-  color: #787878;
+  color: #00B837;
 }
 
 a.link-hover {
@@ -68,7 +68,7 @@ a.link-hover {
 a.link-hover::after {
   width: 0%;
   height: 3px;
-  background: #787878;
+  background: #00B837;
   content: "";
   display: block;
   position: absolute;
@@ -88,21 +88,16 @@ button {
   font-weight: 600;
   font-size: 1.25em;
   background: none;
-  color: #787878;
-  border: 2px solid #787878;
+  color: #00B837;
+  border: 2px solid #00B837;
   padding: 0.5em 0.75em;
-  border-radius: 1em;
+  border-radius: 0.5em;
   transition: background 0.5s, color 0.5s;
 }
 
-button.dark {
-  color: #787878;
-  background: none;
-}
-
 button:hover {
-  background: #787878;
-  color: #EEEEEE;
+  background: #00B837;
+  color: #111111;
 }
 
 body {
@@ -138,7 +133,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #787878;
+  background: #00B837;
   border-radius: 0.15em;
 }
 
@@ -151,12 +146,61 @@ body {
 }
 
 #site-content #hero-content {
-  width: 100%;
+  width: 95%;
   height: 100vh;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 5%;
+}
+#site-content #hero-content #hero-interactable {
+  width: 50%;
+  height: 100%;
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: start;
+}
+#site-content #hero-content #hero-interactable #hero-button-container {
+  width: 80%;
+  padding-top: 5vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  gap: 2vh;
   align-items: center;
+  padding-right: 20%;
+}
+#site-content #hero-content #hero-interactable #hero-button-container button {
+  width: 60%;
+}
+#site-content #hero-content #hero-bgimg {
+  width: 50%;
+  height: 100%;
+  position: relative;
+}
+#site-content #hero-content #hero-bgimg-image {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+#site-content #hero-content #hero-bgimg-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background: linear-gradient(to right, #111111, rgba(17, 17, 17, 0.6));
 }
 #site-content #item-promo {
   width: 100%;
