--- a/src/main/resources/static/styles/home/hero.scss
+++ b/src/main/resources/static/styles/home/hero.scss
@@ -1,8 +1,57 @@
 #hero-content {
-  width: 100%;
+  width: 95%;
   height: 100vh;
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
   justify-content: center;
   align-items: center;
+  padding-left: 5%;
+  #hero-interactable {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: start;
+    #hero-button-container {
+      width: 80%;
+      padding-top: 5vh;
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      gap: 2vh;
+      align-items: center;
+      padding-right: 20%;
+      button {
+        width: 60%;
+      }
+    }
+  }
+  #hero-bgimg {
+    width: 50%;
+    height: 100%;
+    position: relative;
+  }
+  #hero-bgimg-image {
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+  }
+  #hero-bgimg-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background: linear-gradient(to right, transparentize($secondary, 0), transparentize($secondary, 0.4));
+  }
 }
