--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -106,6 +106,7 @@ body {
   width: 100%;
   min-height: 100vh;
   background: #111111;
+  overflow-x: hidden;
 }
 
 #site-content {
@@ -204,11 +205,112 @@ body {
 }
 #site-content #item-promo {
   width: 100%;
-  height: 100vh;
+  overflow: hidden;
+  height: 60vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
+  align-items: start;
+}
+#site-content #item-promo h1 {
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  text-align: center;
+  width: 100%;
+}
+#site-content #item-promo #item-scroll-area {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row;
   align-items: center;
+  justify-content: center;
+}
+#site-content #item-promo #item-scroll-area .scroll-arrow-button {
+  background: none;
+  color: unset;
+  width: 5%;
+  border: none;
+  position: relative;
+}
+#site-content #item-promo #item-scroll-area .scroll-arrow-button i {
+  width: 100%;
+  color: #00B837;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: transform ease-in-out 0.3s;
+}
+#site-content #item-promo #item-scroll-area .scroll-arrow-button i:hover {
+  transform: scale(1.5);
+  transform-origin: center;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow {
+  width: 90%;
+  height: 100%;
+  overflow: hidden;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container {
+  flex: 1;
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  flex-flow: row;
+  gap: 3vw;
+  will-change: transform;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile {
+  width: 20.25vw;
+  height: 90%;
+  background: #111111;
+  border-radius: 1em;
+  position: relative;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile .top-rated-item-tile-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background: rgba(17, 17, 17, 0.8);
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2%;
+  padding: 5%;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile .top-rated-item-tile-content h5 {
+  width: 100%;
+  overflow-wrap: anywhere;
+  text-align: center;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile .top-rated-item-tile-content .top-rated-item-tile-body {
+  flex: 1;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5%;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile .top-rated-item-tile-content .top-rated-item-tile-body p {
+  width: 100%;
+  text-align: center;
+}
+#site-content #item-promo #item-scroll-area #item-scroll-overflow #item-scroll-container .top-rated-item-tile img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  border-radius: 1em;
 }
 #site-content #current-featured {
   width: 100%;
