--- a/src/main/resources/static/styles/home/item-promo.scss
+++ b/src/main/resources/static/styles/home/item-promo.scss
@@ -1,8 +1,110 @@
 #item-promo {
   width: 100%;
-  height: 100vh;
+  overflow: hidden;
+  height: 60vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  h1 {
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    text-align: center;
+    width: 100%;
+  }
+  #item-scroll-area {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    .scroll-arrow-button {
+      background: none;
+      color: unset;
+      width: 5%;
+      border: none;
+      position: relative;
+      i {
+        width: 100%;
+        color: $accent;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transition: transform ease-in-out 0.3s;
+      }
+      i:hover {
+        transform: scale(1.5);
+        transform-origin: center;
+      }
+    }
+    #item-scroll-overflow {
+      width: 90%;
+      height: 100%;
+      overflow: hidden;
+      #item-scroll-container {
+        flex: 1;
+        width: fit-content;
+        height: 100%;
+        display: flex;
+        flex-flow: row;
+        gap: 3vw;
+        will-change: transform;
+        .top-rated-item-tile {
+          width: 20.25vw;
+          height: 90%;
+          background: darken($secondary, 0.1);
+          border-radius: 1em;
+          position: relative;
+          .top-rated-item-tile-content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 2;
+            background: transparentize($secondary, 0.2);
+            display: flex;
+            flex-flow: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2%;
+            padding: 5%;
+            h5 {
+              width: 100%;
+              overflow-wrap: anywhere;
+              text-align: center;
+            }
+            .top-rated-item-tile-body {
+              flex: 1;
+              display: flex;
+              flex-flow: column;
+              align-items: center;
+              justify-content: center;
+              gap: 5%;
+              p {
+                width: 100%;
+                text-align: center;
+              }
+            }
+          }
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+            border-radius: 1em;
+          }
+        }
+      }
+    }
+  }
+
 }
