--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -92,9 +92,10 @@ button {
   border: 2px solid $accent;
   padding: 0.5em 0.75em;
   border-radius: 0.5em;
+  will-change: background, color;
   transition: background 0.5s, color 0.5s;
 }
-button:hover {
+button:hover, button:focus {
   background: $accent;
   color: $secondary;
 }
