--- a/src/main/resources/static/styles/home/current-featured.scss
+++ b/src/main/resources/static/styles/home/current-featured.scss
@@ -1,8 +1,50 @@
 #current-featured {
-  width: 100%;
+  width: 80%;
   height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 10vh;
+  border-radius: 1em;
+  position: relative;
+  #featured-overlay {
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background: transparentize($secondary, 0.2);
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    div {
+      flex: 1;
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      gap: 5%;
+    }
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    border-radius: 1em;
+  }
 }
