--- a/src/main/resources/static/styles/home/discount-promo.scss
+++ b/src/main/resources/static/styles/home/discount-promo.scss
@@ -1,8 +1,11 @@
 #discount-promo {
-  width: 100%;
-  height: 100vh;
+  width: 90%;
+  height: 50vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  gap: 3vh;
+  padding-left: 5%;
+  padding-right: 5%;
 }
