--- a/src/main/resources/static/styles/home/top-ratings-display.scss
+++ b/src/main/resources/static/styles/home/top-ratings-display.scss
@@ -1,8 +1,57 @@
 #top-ratings-display {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  h1 {
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
+  .rating-tile {
+    width: 80%;
+    height: fit-content;
+    margin-left: 9%;
+    margin-right: 9%;
+    padding: 2vh 1%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    position: relative;
+    h6 {
+      width: 40%;
+    }
+    p {
+      width: 30%;
+    }
+  }
+  .rating-tile.rating-left {
+    text-align: left;
+    align-items: start;
+  }
+  .rating-tile.rating-left::after {
+    width: 2px;
+    height: 100%;
+    background: $primary;
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .rating-tile.rating-right {
+    text-align: right;
+    align-items: end;
+  }
+  .rating-tile.rating-right::after {
+    width: 2px;
+    height: 100%;
+    background: $primary;
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
