--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,19 +80,33 @@ Requisite content:
 
     <div id="current-featured">
         <!-- Designate the most unique menu item as the 'featured' item and show it off here. -->
-        <h1>Featured Deal</h1>
+        <div id="featured-overlay">
+            <h1 th:text="|Our Top Featured Item: ${featureditem.getLabel()}|"></h1>
+            <div>
+                <p th:text="${featureditem.getDeal().getMessage()}"></p>
+                <p th:text="|Get ${featureditem.getDeal().getDiscount()}${!featureditem.getDeal().isIsPercentageBased() ? '$' : ''}${featureditem.getDeal().isIsPercentageBased() ? '%' : ''} off on this ${'$'}${featureditem.getPrice()} item|"></p>
+            </div>
+            <button>Add to Cart</button>
+        </div>
+        <img th:src="${featureditem.getIconUrl()}" alt="featured item background image.">
     </div>
 
 
     <div id="discount-promo">
         <!-- Start your week off with a site-wide discount. -->
-        <h1>Have a Discount</h1>
+        <h1 th:text="${sitewidedaydiscount ? 'Start Your Week Strong With A Discount' : 'Come Back Monday For A Discount'}"></h1>
+        <p>We understand that mondays are hard, and we want to make yours better. So every monday, a site-wide discount of 10% is applied to every order!</p>
+        <button th:if="${sitewidedaydiscount}">Redeem Your Discount</button>
     </div>
 
 
     <div id="top-ratings-display">
         <!-- Future: add a system to retrieve recent 5-star reviews and display them. -->
         <h1>Top Ratings</h1>
+        <div class="rating-tile" th:each="ratingTile,iterStat:${topratings}" th:classappend="${iterStat.even} ? 'rating-right' : 'rating-left'">
+            <h6 th:text="|${ratingTile.getReviewer().getFirstName()} ${ratingTile.getReviewer().getLastName().charAt(0)}. rated ${ratingTile.getProduct().getLabel()} ${ratingTile.getRating()}/5, saying:|"></h6>
+            <p th:text="${ratingTile.getMessage()}"></p>
+        </div>
     </div>
 
 
