--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@ Requisite content:
             <h1 style="font-size: 5em;">Bringing Premium to Fast Food</h1>
             <h6>So bring home a guilt-free delectable experience.</h6>
             <div id="hero-button-container">
-                <button>Menu</button>
+                <button onclick="location.href=window.location.href + 'menu';">Menu</button>
                 <button>Order</button>
             </div>
         </div>
