--- a/src/main/resources/static/styles/menu.css
+++ b/src/main/resources/static/styles/menu.css
@@ -147,4 +147,9 @@ body {
   display: none;
 }
 
+#site-content #menu-banner {
+  width: 100%;
+  height: 50vh;
+}
+
 /*# sourceMappingURL=menu.css.map */
