--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -22,6 +22,9 @@
 
 
 <div id="site-content">
+    <div id="menu-banner">
+        <h1>Menu</h1>
+    </div>
     <div id="menu-categories-container">
         <div class="menu-topic-tile" th:each="topicTile:${menuCategories}">
             <h1 th:text="${topicTile.getTitle()}"></h1>
