--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -29,14 +29,14 @@
     </div>
 
 
-    <form id="signon-container">
+    <div id="signon-container">
         <h2 id="signon-header">Sign Up With Us!</h2>
         <p id="signon-text">Creating an account with us allows you to earn rewards, create meal plans, and streamline future orders!</p>
         <div id="signon-name-container" class="signon-container">
             <label id="signon-name-label" class="label-signon">
                 Full Name
             </label>
-            <input type="text" id="signon-name-input" autocomplete="username">
+            <input type="text" id="signon-name-input" autocomplete="name">
         </div>
         <div id="signon-email-container" class="signon-container">
             <label id="signon-email-label" class="label-signon">
@@ -51,11 +51,89 @@
             <input type="password" id="signon-password-input" autocomplete="new-password">
         </div>
         <button id="signon-button">Sign Up</button>
-    </form>
+    </div>
 
 
     <div id="extra-info-container">
         <!-- Collect info on user: payment info-->
+        <div id="signon-address-container" class="signon-container">
+            <label id="signon-address-label" class="label-signon">
+                Address
+            </label>
+            <input type="text" id="signon-address-input" autocomplete="street-address">
+        </div>
+
+        <div class="info-align-horizontal">
+            <div id="signon-city-container" class="signon-container">
+                <label id="signon-city-label" class="label-signon">
+                    City
+                </label>
+                <input type="text" id="signon-city-input" autocomplete="address-level2">
+            </div>
+            <div id="signon-zip-container" class="signon-container">
+                <label id="signon-zip-label" class="label-signon">
+                    Zip
+                </label>
+                <input type="text" id="signon-zip-input" autocomplete="postal-code">
+            </div>
+        </div>
+
+        <div class="info-align-horizontal">
+            <div id="signon-state-container" class="signon-container">
+                <label id="signon-state-label" class="label-signon">
+                    State
+                </label>
+                <input type="text" id="signon-state-input" autocomplete="address-level1">
+            </div>
+            <div id="signon-country-container" class="signon-container">
+                <label id="signon-country-label" class="label-signon">
+                    Country
+                </label>
+                <input type="text" id="signon-country-input" autocomplete="country-name">
+            </div>
+        </div>
+
+        <div id="signon-phone-container" class="signon-container">
+            <label id="signon-phone-label" class="label-signon">
+                Phone
+            </label>
+            <input type="text" id="signon-phone-input" autocomplete="tel">
+        </div>
+
+        <div id="signon-cardnum-container" class="signon-container">
+            <label id="signon-cardnum-label" class="label-signon">
+                Card #
+            </label>
+            <input type="text" id="signon-cardnum-input" autocomplete="cc-number">
+        </div>
+
+        <div id="signon-cardusername-container" class="signon-container">
+            <label id="signon-cardusername-label" class="label-signon">
+                Card Username
+            </label>
+            <input type="text" id="signon-cardusername-input" autocomplete="cc-name">
+        </div>
+
+        <div class="info-align-horizontal">
+
+            <div id="signon-cardexpdate-container" class="signon-container">
+                <label id="signon-cardexpdate-label" class="label-signon">
+                    Expiration Date
+                </label>
+                <input type="text" id="signon-cardexpdate-input" autocomplete="cc-exp">
+            </div>
+
+            <div id="signon-cardsecuritycode-container" class="signon-container">
+                <label id="signon-cardsecuritycode-label" class="label-signon">
+                    Security Code
+                </label>
+                <input type="text" id="signon-cardsecuritycode-input" autocomplete="cc-csc">
+            </div>
+
+        </div>
+
+        <button id="signup-button">Create Account</button>
+
     </div>
 
 </div>
