--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -2,6 +2,59 @@
 @import 'header';
 
 
+#menu-item-overlay {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background: transparentize($secondary, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 4;
+
+  #menu-item-details-container {
+    width: 50vw;
+    height: 70vh;
+    position: relative;
+    background: lighten($secondary, 5%);
+    border-radius: 2em;
+    z-index: 5;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    #menu-item-top {
+      width: 50vw;
+      height: 35vh;
+      display: flex;
+      flex-flow: row;
+      justify-content: center;
+      align-items: center;
+      #menu-item-main-info {
+        width: 25vw;
+        height: 100%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        gap: 1vh;
+        align-items: center;
+      }
+    }
+    #menu-item-desc-container {
+      width: 50vw;
+      height: 35vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+
 #site-content {
   #menu-banner {
     width: 100%;
