--- a/src/main/resources/static/styles/menu/menu_item_display.scss
+++ b/src/main/resources/static/styles/menu/menu_item_display.scss
@@ -46,6 +46,7 @@
               width: 100%;
               height: 100%;
               object-fit: cover;
+              z-index: 2;
             }
           }
           .item-content-container {
