--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -21,6 +21,23 @@
 </div>
 
 
+<div id="menu-item-overlay" onclick="hideOverlay(event, this);">
+    <div id="menu-item-details-container">
+        <div id="menu-item-top">
+            <div id="menu-item-main-info">
+                <div id="menu-item-label"><h2 id="menu-item-overlay-name">Test1</h2></div>
+                <div id="menu-item-price"><h4 id="menu-item-overlay-price">Test2</h4></div>
+                <div id="menu-item-rating"><h5 id="menu-item-overlay-rating"></h5></div>
+            </div>
+            <div id="menu-item-image">
+                <img id="menu-item-overlay-image" src="" alt="menu item overlay extra info image." style="width: 100%;height: 30vh;object-fit: contain;">
+            </div>
+        </div>
+        <div id="menu-item-desc-container"><p id="menu-item-overlay-desc"></p></div>
+    </div>
+</div>
+
+
 <div id="site-content">
     <div id="menu-banner">
         <h1>Menu</h1>
@@ -44,7 +61,7 @@
                         </div>
                         <div class="item-content-container">
                             <h3 class="item-title" th:text="${item.getLabel()}"></h3>
-                            <button>Add to Cart</button>
+                            <button th:item="${item.getLabel()}" onclick="retrieveItemData(this.getAttribute('item'));">More Info</button>
                         </div>
                     </div>
                 </div>
