Created an actually decent header, just needs animations and the user account icon.

--- a/src/main/resources/static/styles/menu.scss
+++ b/src/main/resources/static/styles/menu.scss
@@ -48,7 +48,8 @@
       width: 50vw;
       height: 35vh;
       display: flex;
-      justify-content: center;
+      flex-flow: column;
+      justify-content: space-evenly;
       align-items: center;
     }
   }
