--- a/src/main/resources/static/styles/menu.css
+++ b/src/main/resources/static/styles/menu.css
@@ -147,6 +147,69 @@ body {
   display: none;
 }
 
+#branding-container {
+  position: fixed;
+  top: 1vh;
+  left: 1vh;
+  z-index: 9999;
+  background: rgba(17, 17, 17, 0.8);
+  padding: 0.5em 1em;
+  border-radius: 1em;
+}
+#branding-container h1 {
+  color: #00B837;
+  font-size: 1.75em;
+}
+
+#header-container {
+  position: fixed;
+  top: 1vh;
+  right: 1vh;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  gap: 1vw;
+  z-index: 9999;
+  height: 5vh;
+  background: rgba(17, 17, 17, 0.8);
+  padding: 0.5em 1em;
+  border-radius: 1em;
+}
+#header-container #header-link-container {
+  display: flex;
+  flex-flow: row;
+  gap: 1vw;
+  align-items: center;
+}
+#header-container #header-link-container #header-show-button {
+  border: unset !important;
+  padding: unset !important;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+#header-container #header-link-container #header-show-button i {
+  color: #00B837;
+  fill: #00B837;
+  font-size: 1.5em;
+}
+#header-container #header-link-container #header-show-button:hover, #header-container #header-link-container #header-show-button:focus {
+  background: unset !important;
+  color: unset !important;
+}
+#header-container #header-account-icon {
+  aspect-ratio: 1/1;
+  height: 100%;
+  border-radius: 1em;
+}
+#header-container #header-account-icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1em;
+}
+
 #menu-item-overlay {
   display: none;
   align-items: center;
@@ -194,7 +257,8 @@ body {
   width: 50vw;
   height: 35vh;
   display: flex;
-  justify-content: center;
+  flex-flow: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -225,10 +289,10 @@ body {
   justify-content: center;
   align-items: center;
   border: #00B837 1px solid;
-  transition: background 1s ease-in-out;
+  transition: background 0.25s ease-in-out;
 }
 #site-content #menu-categories-container .menu-topic-tile h1 {
-  transition: color 1s ease-in-out;
+  transition: color 0.25s ease-in-out;
 }
 #site-content #menu-categories-container .menu-topic-tile.category-selected {
   background: #00B837;
