--- a/src/main/resources/static/styles/signon.css
+++ b/src/main/resources/static/styles/signon.css
@@ -147,6 +147,69 @@ body {
   display: none;
 }
 
+#branding-container {
+  position: fixed;
+  top: 1vh;
+  left: 1vh;
+  z-index: 9999;
+  background: rgba(17, 17, 17, 0.8);
+  padding: 0.5em 1em;
+  border-radius: 1em;
+}
+#branding-container h1 {
+  color: #00B837;
+  font-size: 1.75em;
+}
+
+#header-container {
+  position: fixed;
+  top: 1vh;
+  right: 1vh;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  gap: 1vw;
+  z-index: 9999;
+  height: 5vh;
+  background: rgba(17, 17, 17, 0.8);
+  padding: 0.5em 1em;
+  border-radius: 1em;
+}
+#header-container #header-link-container {
+  display: flex;
+  flex-flow: row;
+  gap: 1vw;
+  align-items: center;
+}
+#header-container #header-link-container #header-show-button {
+  border: unset !important;
+  padding: unset !important;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+#header-container #header-link-container #header-show-button i {
+  color: #00B837;
+  fill: #00B837;
+  font-size: 1.5em;
+}
+#header-container #header-link-container #header-show-button:hover, #header-container #header-link-container #header-show-button:focus {
+  background: unset !important;
+  color: unset !important;
+}
+#header-container #header-account-icon {
+  aspect-ratio: 1/1;
+  height: 100%;
+  border-radius: 1em;
+}
+#header-container #header-account-icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1em;
+}
+
 #signon-content {
   width: 100%;
   height: 100vh;
