--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -16,8 +16,21 @@
 </head>
 <body class="light">
 
-<div id="header-container" class="dark">
-    <!--TODO: Add header-->
+
+<div id="header-container">
+    <div id="header-link-container">
+        <a href="/menu" style="display: none;">Menu</a>
+        <a href="/cart" style="display: none;">Cart</a>
+        <a href="/order" style="display: none;">Order</a>
+        <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
+    </div>
+    <div id="header-account-icon">
+        <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+    </div>
+</div>
+
+<div id="branding-container">
+    <a href="/"><h1>Condelu Meals</h1></a>
 </div>
 
 
@@ -33,7 +46,10 @@
                 <img id="menu-item-overlay-image" src="" alt="menu item overlay extra info image." style="width: 100%;height: 30vh;object-fit: contain;">
             </div>
         </div>
-        <div id="menu-item-desc-container"><p id="menu-item-overlay-desc"></p></div>
+        <div id="menu-item-desc-container">
+            <p id="menu-item-overlay-desc"></p>
+            <button id="add-to-cart-button">Add to Cart</button>
+        </div>
     </div>
 </div>
 
