--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -12,8 +12,21 @@
 </head>
 <body>
 
-<div id="header-container" class="dark">
-    <!-- TODO: Add header -->
+
+<div id="header-container">
+    <div id="header-link-container">
+        <a href="/menu" style="display: none;">Menu</a>
+        <a href="/cart" style="display: none;">Cart</a>
+        <a href="/order" style="display: none;">Order</a>
+        <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
+    </div>
+    <div id="header-account-icon">
+        <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+    </div>
+</div>
+
+<div id="branding-container">
+    <a href="/"><h1>Condelu Meals</h1></a>
 </div>
 
 
