--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-    <script src="/js/home_animations.js"></script>
+    <script src="/js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
@@ -32,12 +32,13 @@ Requisite content:
 <div id="header-container">
     <div id="header-link-container">
         <a href="/menu" style="display: none;">Menu</a>
-        <a href="/cart" style="display: none;">Cart</a>
-        <a href="/order" style="display: none;">Order</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
+        <a class="header-no-remove" href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
     </div>
     <div id="header-account-icon">
-        <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+        <a href="/account">
+            <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+        </a>
     </div>
 </div>
 
