--- a/src/main/resources/static/styles/header.scss
+++ b/src/main/resources/static/styles/header.scss
@@ -30,6 +30,16 @@
     flex-flow: row;
     gap: 1vw;
     align-items: center;
+    z-index: 9999;
+    i {
+      color: $accent;
+      fill: $accent;
+      font-size: 1.75em;
+      z-index: 9999;
+    }
+    a {
+      z-index: 9999;
+    }
     #header-show-button {
       border: unset !important;
       padding: unset !important;
@@ -37,10 +47,12 @@
       flex-flow: column;
       align-items: center;
       justify-content: center;
+      z-index: 9999;
       i {
         color: $accent;
         fill: $accent;
         font-size: 1.5em;
+        z-index: 9999;
       }
     }
     #header-show-button:hover, #header-show-button:focus {
@@ -52,11 +64,19 @@
     aspect-ratio: 1/1;
     height: 100%;
     border-radius: 1em;
+    z-index: 9999;
+    a {
+      width: 100%;
+      height: 100%;
+      border-radius: 1em;
+      z-index: 9999;
+    }
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 1em;
+      z-index: 9999;
     }
   }
 }
