--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-    <script src="/js/menu_animations.js"></script>
+    <script src="/js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
@@ -20,12 +20,13 @@
 <div id="header-container">
     <div id="header-link-container">
         <a href="/menu" style="display: none;">Menu</a>
-        <a href="/cart" style="display: none;">Cart</a>
-        <a href="/order" style="display: none;">Order</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
+        <a class="header-no-remove" href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
     </div>
     <div id="header-account-icon">
-        <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+        <a href="/account">
+            <img id="header-account-icon-image" src="/images/default-avatar-icon.jpg" alt="account icon">
+        </a>
     </div>
 </div>
 
@@ -48,7 +49,7 @@
         </div>
         <div id="menu-item-desc-container">
             <p id="menu-item-overlay-desc"></p>
-            <button id="add-to-cart-button">Add to Cart</button>
+            <button id="add-to-cart-button" onclick="addItemToCart();">Add to Cart</button>
         </div>
     </div>
 </div>
