--- a/src/main/resources/templates/viewcart.html
+++ b/src/main/resources/templates/viewcart.html
@@ -47,22 +47,24 @@
 
         </div>
         <div id="cart-totals">
-            <p id="cart-total-count">Items: 0</p>
+            <h4 id="cart-total-count">Items: 0</h4>
             <div id="cart-price">
                 <div id="cart-price-labels">
-                    <p id="cart-total-price-subtotal-label">Subtotal:</p>
-                    <p id="cart-total-tax-label">Tax:</p>
-                    <p id="cart-total-price-label">Total:</p>
+                    <h4 id="cart-total-price-subtotal-label">Subtotal:</h4>
+                    <h4 id="cart-total-tax-label">Tax:</h4>
+                    <h4 id="cart-total-price-label">Total:</h4>
                 </div>
                 <div id="cart-price-values">
-                    <p id="cart-total-price-subtotal">0</p>
-                    <p id="cart-total-tax">0</p>
-                    <p id="cart-total-price">0</p>
+                    <h4 id="cart-total-price-subtotal">0</h4>
+                    <h4 id="cart-total-tax">0</h4>
+                    <h4 id="cart-total-price">0</h4>
                 </div>
             </div>
         </div>
+        <div id="cart-order-container">
+            <button onclick="placeOrder()">Proceed to Checkout</button>
+        </div>
     </div>
-
 </div>
 
 
