--- a/src/main/resources/static/styles/viewcart.css
+++ b/src/main/resources/static/styles/viewcart.css
@@ -234,21 +234,37 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 10vh;
+  padding-top: 15vh;
+  padding-bottom: 10vh;
 }
 #site-content #cart-display {
   width: 80%;
   border-left: #00B837 1px solid;
   border-right: #00B837 1px solid;
-  padding: 5vh 3vw;
+  padding: 2vh 3vw;
 }
 #site-content #cart-display #cart-items-container {
   width: 100%;
-  min-height: 50vh;
+  min-height: 30vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  gap: 3vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+#site-content #cart-display #cart-items-container .cart-item-tile {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  border-top: rgba(0, 184, 55, 0.5) 1px solid;
+  padding-top: 1vh;
+}
+#site-content #cart-display #cart-items-container .cart-item-tile:hover {
+  text-decoration: line-through #00B837;
 }
 #site-content #cart-display #cart-totals {
   width: 100%;
@@ -279,6 +295,13 @@ body {
   justify-content: center;
   gap: 1vh;
   align-items: end;
+}
+#site-content #cart-display #cart-order-container {
+  width: 100%;
+  padding-top: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=viewcart.css.map */
