Finished system where cart header is updated on item content change.

--- a/src/main/resources/static/styles/header.scss
+++ b/src/main/resources/static/styles/header.scss
@@ -37,6 +37,15 @@
       font-size: 1.75em;
       z-index: 9999;
     }
+    .header-no-remove {
+      position: relative;
+      #cart-item-count {
+        position: absolute;
+        bottom: -35%;
+        right: -25%;
+        color: $accent;
+      }
+    }
     a {
       z-index: 9999;
     }
