--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -50,7 +50,7 @@ h6 {
   font-size: 1.65em;
   color: $primary;
 }
-p, input {
+p, input, label {
   font-family: $paragraphFamily;
   margin: 0;
   color: $primary;
