--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -155,12 +155,14 @@
                 </div>
             </div>
         </div>
-        <button>Continue</button>
+        <button onclick="finalizeOrder()">Place Order</button>
     </div>
 
 
     <div id="finalize-order-container" style="display: none;">
-
+        <h1>Thanks for shopping with us!</h1>
+        <h3>Your order is being prepared.</h3>
+        <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
     </div>
 </div>
 
